[gd_scene load_steps=26 format=3 uid="uid://d2uf5d7bgtkgk"]

[ext_resource type="Script" path="res://Chapters/Chapter 1/Elements/Game Component/Components/Enemies/script/skull.gd" id="1_evok7"]
[ext_resource type="Texture2D" uid="uid://b5t3mcu2symw8" path="res://Chapters/Chapter 1/Elements/Game Component/Components/Enemies/Art/Cyclops/Enemy_008_B.png" id="3_dgn1j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kjsoj"]
atlas = ExtResource("3_dgn1j")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf5pk"]
atlas = ExtResource("3_dgn1j")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7oxvk"]
atlas = ExtResource("3_dgn1j")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ca5yh"]
atlas = ExtResource("3_dgn1j")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlydp"]
atlas = ExtResource("3_dgn1j")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uy5jo"]
atlas = ExtResource("3_dgn1j")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tdrp"]
atlas = ExtResource("3_dgn1j")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyqf2"]
atlas = ExtResource("3_dgn1j")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8oto"]
atlas = ExtResource("3_dgn1j")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_is7eu"]
atlas = ExtResource("3_dgn1j")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ri4o1"]
atlas = ExtResource("3_dgn1j")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_umpom"]
atlas = ExtResource("3_dgn1j")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfk2x"]
atlas = ExtResource("3_dgn1j")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ordht"]
atlas = ExtResource("3_dgn1j")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_okt1u"]
atlas = ExtResource("3_dgn1j")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hng54"]
atlas = ExtResource("3_dgn1j")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hccd4"]
atlas = ExtResource("3_dgn1j")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqjsp"]
atlas = ExtResource("3_dgn1j")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uq63t"]
atlas = ExtResource("3_dgn1j")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sm8r"]
atlas = ExtResource("3_dgn1j")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hx42s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjsoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf5pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7oxvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ca5yh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlydp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uy5jo")
}],
"loop": true,
"name": &"deal_damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tdrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyqf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8oto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_is7eu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ri4o1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umpom")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfk2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ordht")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_okt1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hng54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hccd4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqjsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uq63t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sm8r")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ufj3a"]
size = Vector2(14, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kn04v"]
size = Vector2(12, 11)

[node name="Skull" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1_evok7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-4.76837e-07, 0)
scale = Vector2(0.8, 0.832)
sprite_frames = SubResource("SpriteFrames_hx42s")
animation = &"walk"
frame_progress = 0.485477
speed_scale = 4.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_ufj3a")

[node name="DirectionTimer" type="Timer" parent="."]
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_kn04v")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, 3)

[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
